# cargo_bug_repo_0

./: Dockerfile
project/downstream_application/some_application/: Cargo.toml
project/upstream_lib/my_lib/: Cargo.toml
