[package]
name = "rover"
version = "0.1.0"
authors = ["joshua salzedo <thHunkn0WNd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.6.1", default-features = false , git = "https://github.com/danburkert/prost.git", package = "prost"}
# Only necessary if using Protobuf well-known types:
prost-types = { version = "0.6.1", default-features = false, git = "https://github.com/danburkert/prost.git", package="prost-types" }

[build-dependencies]
prost-build = { version = "0.6.1", default-features = false, git = "https://github.com/danburkert/prost.git", package="prost-build"}

